--- a/index.html
+++ b/index.html
@@ -202,11 +202,10 @@
             Project 2: ChatBot Tunisien
             </a>
         </h1>
-        <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          1-pipeline:
-•tokenize lines (split lines into words in the same list)
-•eliminate duplicated words and word have same sense with lemmatizer
-•Preparing data by transforming words in the list into numerical values, create the bag of words (exemple : Our list after tokenize -&gt;[hi, bye, I, will, go, eat, play, too, football, see, u, watch, champions, league] -&gt;length=13 Line 1-&gt; hi, I will go to eat [1,0,1,1,1,0,1,0,0,0,0,0,0]-&gt;same length: refer to eat tag
+        <div class="">
+         create chatbot  speak 3 different languages at the same time (Tunisian ,French ,English)using natural language preprocessing including nltk tools
+         for data preparation and the RNN model for prediction.
+
         </div>
           <a href="https://alisaidiportfolio.github.io/post/project-2/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
