--- a/index.html
+++ b/index.html
@@ -236,14 +236,9 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          •Data Analysis Using SQL
-•Data Cleaning &amp; ETL(extract transform load ) Using Power BI based on DAX language
-•identify important features that influence the profit and revenue (KPI)
-•Build Dashboard Or a Report
-•Publish A Report
-•dashboard in mobile application(responsive)
-•give a feedback (report) to the manager to make decisions
-Link To GitHub Repository
+        This project will be explaning from the perspective of sales data at a hardware company AtliQ
+        simple visual display of the most important information with MYSQL and PowerBI that decision makers need to help them achieve objectives
+        KPI  dashboard define your key performance indicators using PowerBI
         </div>
           <a href="https://alisaidiportfolio.github.io/post/chapter-1/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
